# hermes-twenty-crm

./: .env.example  .gitignore  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml  runtime.py  schemas.py  tools.py
skills/twenty-crm/: SKILL.md
tests/: test_tools.py
