[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-twenty-crm"
version = "0.1.0"
description = "Generic Twenty CRM plugin for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "TREE Industries"}]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
py-modules = ["schemas", "tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
